website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.4.0/docusaurus-core.mdx
---
sidebar_label: Client API
---

# Docusaurus 客户端 API

Docusaurus 提供了一些客户端 API，在构建站点时可能会对您有所帮助。

## 组件 {#components}

### `<ErrorBoundary />` {#errorboundary}

该组件创建了一个 [React 错误边界](https://reactjs.org/docs/error-boundaries.html)。

用它来包裹可能抛出错误的组件，当错误发生时显示备用内容，而不是导致整个应用崩溃。

```jsx
import React from 'react';
import ErrorBoundary from '@docusaurus/ErrorBoundary';

const SafeComponent = () => (
  <ErrorBoundary
    fallback={({error, tryAgain}) => (
      <div>
        <p>This component crashed because of error: {error.message}.</p>
        <button onClick={tryAgain}>Try Again!</button>
      </div>
    )}>
    <SomeDangerousComponentThatMayThrow />
  </ErrorBoundary>
);
```

import ErrorBoundaryTestButton from '@site/src/components/ErrorBoundaryTestButton'

:::tip

点击此处查看实际效果：<ErrorBoundaryTestButton/>

:::

:::info

Docusaurus 使用该组件捕获主题布局内的错误，以及整个应用内的错误。

:::

:::note

该组件不会捕获构建时错误，仅保护客户端渲染时可能发生的错误，这些错误通常在使用有状态的 React 组件时出现。

:::

#### 属性 {#errorboundary-props}

- `fallback`: 可选的渲染回调函数，返回一个 JSX 元素。它会接收一个包含两个属性的对象：`error`，即被捕获的错误；`tryAgain`，一个用于重置组件错误并尝试重新渲染的函数回调（`() => void`）。如果未提供，则会渲染 `@theme/Error` 作为替代。`@theme/Error` 用于包裹整个站点的错误边界，位于布局之上。

:::warning

`fallback` 属性是一个回调函数，**而不是一个 React 函数组件**。您不能在此回调中使用 React 钩子。

:::

### `<Head/>` {#head}

这个可复用的 React 组件将管理您对文档头部的所有更改。它接受普通的 HTML 标签并输出普通的 HTML 标签，对初学者友好。它是 [React Helmet](https://github.com/nfl/react-helmet) 的封装。

使用示例：

```jsx
import React from 'react';
// highlight-next-line
import Head from '@docusaurus/Head';

const MySEO = () => (
  // highlight-start
  <Head>
    <meta property="og:description" content="My custom description" />
    <meta charSet="utf-8" />
    <title>My Title</title>
    <link rel="canonical" href="http://mysite.com/example" />
  </Head>
  // highlight-end
);
```

嵌套或后出现的组件会覆盖重复的用法：

```jsx
<Parent>
  {/* highlight-start */}
  <Head>
    <title>My Title</title>
    <meta name="description" content="Helmet application" />
  </Head>
  {/* highlight-end */}
  <Child>
    {/* highlight-start */}
    <Head>
      <title>Nested Title</title>
      <meta name="description" content="Nested component" />
    </Head>
    {/* highlight-end */}
  </Child>
</Parent>
```

输出：

```html
<head>
  <title>Nested Title</title>
  <meta name="description" content="Nested component" />
</head>
```

### `<Link/>` {#link}

该组件支持链接到内部页面，并提供称为预加载的强大性能特性。预加载用于预取资源，以便用户在通过此组件导航时资源已经获取完成。我们使用 `IntersectionObserver` 在 `<Link>` 进入视口时发起低优先级请求，然后在用户可能导航到该资源时通过 `onMouseOver` 事件触发高优先级请求。

该组件是对 react-router 的 `<Link>` 组件的封装，增加了 Docusaurus 特有的增强功能。所有属性都会传递给 react-router 的 `<Link>` 组件。

外部链接同样适用，并自动具有以下属性：`target="_blank" rel="noopener noreferrer"`。

```jsx
import React from 'react';
// highlight-next-line
import Link from '@docusaurus/Link';

const Page = () => (
  <div>
    <p>
      {/* highlight-next-line */}
      Check out my <Link to="/blog">blog</Link>!
    </p>
    <p>
      {/* highlight-next-line */}
      Follow me on <Link to="https://x.com/docusaurus">X</Link>!
    </p>
  </div>
);
```

#### `to`: 字符串 {#to-string}

要导航到的目标位置。例如：`/docs/introduction`。

```jsx
<Link to="/courses" />
```

:::tip

优先使用此组件而非原生的 `<a>` 标签，因为如果您使用 `<Link>`，Docusaurus 会进行大量优化（例如检测损坏的路径、预取、应用基础 URL 等）。

:::

### `<Redirect/>` {#redirect}

渲染 `<Redirect>` 将导航到新位置。新位置会像服务器端重定向（HTTP 3xx）一样覆盖历史堆栈中的当前位置。有关可用属性的更多信息，请参阅 [React Router 的 Redirect 文档](https://reacttraining.com/react-router/web/api/Redirect)。

使用示例：

```jsx
import React from 'react';
// highlight-next-line
import {Redirect} from '@docusaurus/router';

const Home = () => {
  // highlight-next-line
  return <Redirect to="/docs/test" />;
};
```

:::note

`@docusaurus/router` 实现了 [React Router](https://reacttraining.com/react-router/web/guides/quick-start) 并支持其功能特性。

:::

### `<BrowserOnly/>` {#browseronly}

`<BrowserOnly>` 组件允许在浏览器端 React 应用完成水合(hydration)后，再渲染 React 组件。

:::tip

当代码需要访问 `window` 或 `document` 对象而无法在 Node.js 环境运行时，可使用此组件。

:::

#### 属性 {#browseronly-props}

- `children`: 渲染函数属性，返回仅限浏览器端渲染的 JSX。在 Node.js 环境中不会执行
- `fallback` (可选): 在服务端(Node.js)和 React 水合完成前渲染的 JSX

#### 代码示例 {#browseronly-example-code}

```jsx
// highlight-start
import BrowserOnly from '@docusaurus/BrowserOnly';
// highlight-end

const MyComponent = () => {
  return (
    // highlight-start
    <BrowserOnly>
      {() => <span>page url = {window.location.href}</span>}
    </BrowserOnly>
    // highlight-end
  );
};
```

#### 库集成示例 {#browseronly-example-library}

```jsx
// highlight-start
import BrowserOnly from '@docusaurus/BrowserOnly';
// highlight-end

const MyComponent = (props) => {
  return (
    // highlight-start
    <BrowserOnly fallback={<div>Loading...</div>}>
      {() => {
        const LibComponent = require('some-lib').LibComponent;
        return <LibComponent {...props} />;
      }}
    </BrowserOnly>
    // highlight-end
  );
};
```

### `<Interpolate/>` {#interpolate}

用于处理含动态占位符文本的简易插值组件。

占位符将被替换为您提供的动态值及自定义 JSX 元素（字符串、链接、样式化元素等）。

#### 属性 {#interpolate-props}

- `children`: 包含插值占位符的文本，如 `{placeholderName}`
- `values`: 包含插值占位符值的对象

```jsx
import React from 'react';
import Link from '@docusaurus/Link';
import Interpolate from '@docusaurus/Interpolate';

export default function VisitMyWebsiteMessage() {
  return (
    // highlight-start
    <Interpolate
      values={{
        firstName: 'Sébastien',
        website: (
          <Link to="https://docusaurus.io" className="my-website-class">
            website
          </Link>
        ),
      }}>
      {'Hello, {firstName}! How are you? Take a look at my {website}'}
    </Interpolate>
    // highlight-end
  );
}
```

### `<Translate/>` {#translate}

当进行[站点本地化](./i18n/i18n-introduction.mdx)时，`<Translate/>` 组件可为 React 组件（如首页）提供翻译支持。该组件支持[插值功能](#interpolate)。

翻译字符串将通过 [`docusaurus write-translations`](./cli.mdx#docusaurus-write-translations-sitedir) CLI 从代码中静态提取，并在 `website/i18n/[locale]` 目录下生成 `code.json` 翻译文件。

:::note

`<Translate/>` 的属性必须是硬编码字符串。

除用于插值的 `values` 属性外，使用变量将导致静态提取失效。

:::

#### 属性 {#translate-props}

- `children`: 默认站点语言的未翻译字符串（可包含[插值占位符](#interpolate)）
- `id`: 可选值，用作 JSON 翻译文件中的键名
- `description`: 可选说明文本，辅助翻译人员理解
- `values`: 可选对象，包含插值占位符的值

#### 示例 {#example}

```jsx title="src/pages/index.js"
import React from 'react';
import Layout from '@theme/Layout';

// highlight-start
import Translate from '@docusaurus/Translate';
// highlight-end

export default function Home() {
  return (
    <Layout>
      <h1>
        {/* highlight-start */}
        <Translate
          id="homepage.title"
          description="The homepage welcome message">
          Welcome to my website
        </Translate>
        {/* highlight-end */}
      </h1>
      <main>
        {/* highlight-start */}
        <Translate values={{firstName: 'Sébastien'}}>
          {'Welcome, {firstName}! How are you?'}
        </Translate>
        {/* highlight-end */}
      </main>
    </Layout>
  );
}
```

:::note

您甚至可以省略 children 属性，在执行 `docusaurus write-translations` CLI 命令后，在 `code.json` 文件中手动指定翻译字符串。

```jsx
<Translate id="homepage.title" />
```

:::

:::info

`<Translate>` 组件支持插值功能。通过自定义代码和 [`translate` 命令式 API](#translate-imperative)，您还可以实现[字符串复数化](https://github.com/facebook/docusaurus/pull/i18n/i18n-tutorial.mdx#pluralization)。

:::

## 钩子函数 {#hooks}

### `useDocusaurusContext` {#useDocusaurusContext}

用于访问 Docusaurus 上下文的 React 钩子。该上下文包含来自 [docusaurus.config.js](api/docusaurus.config.js.mdx) 的 `siteConfig` 对象及额外的站点元数据。

```ts
type PluginVersionInformation =
  | {readonly type: 'package'; readonly version?: string}
  | {readonly type: 'project'}
  | {readonly type: 'local'}
  | {readonly type: 'synthetic'};

type SiteMetadata = {
  readonly docusaurusVersion: string;
  readonly siteVersion?: string;
  readonly pluginVersions: Record<string, PluginVersionInformation>;
};

type I18nLocaleConfig = {
  label: string;
  direction: string;
};

type I18n = {
  defaultLocale: string;
  locales: [string, ...string[]];
  currentLocale: string;
  localeConfigs: Record<string, I18nLocaleConfig>;
};

type DocusaurusContext = {
  siteConfig: DocusaurusConfig;
  siteMetadata: SiteMetadata;
  globalData: Record<string, unknown>;
  i18n: I18n;
  codeTranslations: Record<string, string>;
};
```

使用示例：

```jsx
import React from 'react';
import useDocusaurusContext from '@docusaurus/useDocusaurusContext';

const MyComponent = () => {
  // highlight-next-line
  const {siteConfig, siteMetadata} = useDocusaurusContext();
  return (
    <div>
      {/* highlight-start */}
      <h1>{siteConfig.title}</h1>
      <div>{siteMetadata.siteVersion}</div>
      <div>{siteMetadata.docusaurusVersion}</div>
      {/* highlight-end */}
    </div>
  );
};
```

:::note

`siteConfig` 对象仅包含**可序列化的值**（即经过 `JSON.stringify()` 处理后仍保留的值）。函数、正则表达式等会在客户端丢失。

:::

### `useIsBrowser` {#useIsBrowser}

当 React 应用在浏览器中完成水合时返回 `true`。

:::warning

在 React 渲染逻辑中应使用此钩子而非 `typeof windows !== 'undefined'`。

客户端首次渲染输出（浏览器端）**必须与**服务端渲染输出（Node.js 端）**完全一致**。违反此规则可能导致意外水合行为，详见 [The Perils of Rehydration](https://www.joshwcomeau.com/react/the-perils-of-rehydration/)。

:::

使用示例：

```jsx
import React from 'react';
import useIsBrowser from '@docusaurus/useIsBrowser';

const MyComponent = () => {
  // highlight-start
  const isBrowser = useIsBrowser();
  // highlight-end
  return <div>{isBrowser ? 'Client' : 'Server'}</div>;
};
```

### `useBaseUrl` {#useBaseUrl}

用于在字符串前添加站点 `baseUrl` 的 React 钩子。

:::warning

**不要用于常规链接！**

默认情况下所有**绝对路径**都会自动添加 `/baseUrl/` 前缀：

- Markdown：`[链接](/my/path)` 会指向 `/baseUrl/my/path`
- React：`<Link to="/my/path/">链接</Link>` 会指向 `/baseUrl/my/path`

:::

#### 选项 {#options}

```ts
type BaseUrlOptions = {
  forcePrependBaseUrl: boolean;
  absolute: boolean;
};
```

#### 使用示例： {#example-usage}

```jsx
import React from 'react';
import useBaseUrl from '@docusaurus/useBaseUrl';

const SomeImage = () => {
  // highlight-start
  const imgSrc = useBaseUrl('/img/myImage.png');
  // highlight-end
  return <img src={imgSrc} />;
};
```

:::tip

大多数情况下不需要使用 `useBaseUrl`。

对于[静态资源](./guides/markdown-features/markdown-features-assets.mdx)，优先使用 `require()`：

```jsx
<img src={require('@site/static/img/myImage.png').default} />
```

:::

### `useBaseUrlUtils` {#useBaseUrlUtils}

当 `useBaseUrl` 功能不足时，此钩子可返回与站点基础 URL 相关的附加工具。

- `withBaseUrl`：适用于需要同时为多个 URL 添加基础 URL 的场景。

```jsx
import React from 'react';
import {useBaseUrlUtils} from '@docusaurus/useBaseUrl';

const Component = () => {
  const urls = ['/a', '/b'];
  // highlight-start
  const {withBaseUrl} = useBaseUrlUtils();
  const urlsWithBaseUrl = urls.map(withBaseUrl);
  // highlight-end
  return <div>{/* ... */}</div>;
};
```

### `useGlobalData` {#useGlobalData}

用于访问所有插件创建的 Docusaurus 全局数据的 React 钩子。

全局数据按插件名称和插件 ID 进行命名空间划分。

:::info

插件 ID 仅在同一插件在站点中多次使用时才有意义。每个插件实例可创建自己的全局数据。

:::

```ts
type GlobalData = Record<
  PluginName,
  Record<
    PluginId, // "default" by default
    any // plugin-specific data
  >
>;
```

使用示例：

```jsx
import React from 'react';
// highlight-next-line
import useGlobalData from '@docusaurus/useGlobalData';

const MyComponent = () => {
  // highlight-start
  const globalData = useGlobalData();
  const myPluginData = globalData['my-plugin']['default'];
  return <div>{myPluginData.someAttribute}</div>;
  // highlight-end
};
```

:::tip

可通过 `.docusaurus/globalData.json` 查看站点的全局数据

:::

### `usePluginData` {#usePluginData}

访问特定插件实例创建的全局数据。

这是访问插件全局数据最便捷的钩子，在大多数情况下应优先使用。

若不使用多实例插件，`pluginId` 为可选参数。

```ts
function usePluginData(
  pluginName: string,
  pluginId?: string,
  options?: {failfast?: boolean},
);
```

使用示例：

```jsx
import React from 'react';
// highlight-next-line
import {usePluginData} from '@docusaurus/useGlobalData';

const MyComponent = () => {
  // highlight-start
  const myPluginData = usePluginData('my-plugin');
  return <div>{myPluginData.someAttribute}</div>;
  // highlight-end
};
```

### `useAllPluginInstancesData` {#useAllPluginInstancesData}

访问特定插件创建的全局数据。给定插件名称后，将按插件 ID 返回该插件所有实例的数据。

```ts
function useAllPluginInstancesData(
  pluginName: string,
  options?: {failfast?: boolean},
);
```

使用示例：

```jsx
import React from 'react';
// highlight-next-line
import {useAllPluginInstancesData} from '@docusaurus/useGlobalData';

const MyComponent = () => {
  // highlight-start
  const allPluginInstancesData = useAllPluginInstancesData('my-plugin');
  const myPluginData = allPluginInstancesData['default'];
  return <div>{myPluginData.someAttribute}</div>;
  // highlight-end
};
```

### `useBrokenLinks` {#useBrokenLinks}

React钩子函数，用于访问Docusaurus的坏链检查API，为Docusaurus页面提供报告和收集链接及锚点的能力。

:::warning

这是一个**高级**API，**大多数Docusaurus用户无需直接使用**。

它已**内置**在现有高级组件中：

- [`<Link>`](#link)组件会自动收集链接
- `@theme/Heading`（用于Markdown标题）会自动收集锚点

仅在实现自定义`<Heading>`或`<Link>`组件时才需使用`useBrokenLinks()`。

:::

使用示例：

```js title="MyHeading.js"
import useBrokenLinks from '@docusaurus/useBrokenLinks';

export default function MyHeading(props) {
  useBrokenLinks().collectAnchor(props.id);
  return <h2 {...props} />;
}
```

```js title="MyLink.js"
import useBrokenLinks from '@docusaurus/useBrokenLinks';

export default function MyLink(props) {
  useBrokenLinks().collectLink(props.href);
  return <a {...props} />;
}
```

## 函数 {#functions}

### `interpolate` {#interpolate-1}

[`<Interpolate>`](#interpolate)组件的命令式等价实现。

#### 签名 {#signature}

```ts
// Simple string interpolation
function interpolate(text: string, values: Record<string, string>): string;

// JSX interpolation
function interpolate(
  text: string,
  values: Record<string, ReactNode>,
): ReactNode;
```

#### 示例 {#example-1}

```js
// highlight-next-line
import {interpolate} from '@docusaurus/Interpolate';

const message = interpolate('Welcome {firstName}', {firstName: 'Sébastien'});
```

### `translate` {#translate-imperative}

[`<Translate>`](#translate)组件的命令式等价实现，同时支持[占位符插值](#interpolate)。

:::tip

仅在**无法使用组件**的**特殊场景**下使用此命令式API，例如：

- 页面`title`元数据
- 表单输入的`placeholder`属性
- 无障碍功能的`aria-label`属性

:::

#### 签名 {#signature-1}

```ts
function translate(
  translation: {message: string; id?: string; description?: string},
  values: Record<string, string>,
): string;
```

#### 示例 {#example-2}

```jsx title="src/pages/index.js"
import React from 'react';
import Layout from '@theme/Layout';

// highlight-next-line
import {translate} from '@docusaurus/Translate';

export default function Home() {
  return (
    <Layout
      // highlight-next-line
      title={translate({message: 'My page meta title'})}>
      <img
        src={'https://docusaurus.io/logo.png'}
        aria-label={
          // highlight-start
          translate(
            {
              message: 'The logo of site {siteName}',
              // Optional
              id: 'homepage.logo.ariaLabel',
              description: 'The home page logo aria label',
            },
            {siteName: 'Docusaurus'},
          )
          // highlight-end
        }
      />
    </Layout>
  );
}
```

## 模块 {#modules}

### `ExecutionEnvironment` {#executionenvironment}

该模块暴露若干布尔变量，用于检测当前渲染环境。

:::warning

对于React渲染逻辑，请改用[`useIsBrowser()`](#useIsBrowser)或[`<BrowserOnly>`](#browseronly)。

:::

示例：

```js
import ExecutionEnvironment from '@docusaurus/ExecutionEnvironment';

if (ExecutionEnvironment.canUseDOM) {
  require('lib-that-only-works-client-side');
}
```

| Field | Description |
| --- | --- |
| `ExecutionEnvironment.canUseDOM` | `true` if on client/browser, `false` on Node.js/prerendering. |
| `ExecutionEnvironment.canUseEventListeners` | `true` if on client and has `window.addEventListener`. |
| `ExecutionEnvironment.canUseIntersectionObserver` | `true` if on client and has `IntersectionObserver`. |
| `ExecutionEnvironment.canUseViewport` | `true` if on client and has `window.screen`. |

### `constants` {#constants}

该模块向客户端主题代码暴露有用的常量。

```js
import {DEFAULT_PLUGIN_ID} from '@docusaurus/constants';
```

| Named export        | Value     |
| ------------------- | --------- |
| `DEFAULT_PLUGIN_ID` | `default` |